--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/carrusel1.JPG" class="d-block w-100" alt="...">
+            <img src="images/img/carrusel1.JPG" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Las Mejores Soluciones</h5>
               <p>Aplicando las mejores soluciones del mercado.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/carrusel2.jpg" class="d-block w-100" alt="...">
+            <img src="images/img/carrusel2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Soluciones Efectivas</h5>
               <p>Siempre en busca de las mejores posibilidades y tecnologias</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/slider3.png" class="d-block w-100" alt="...">
+            <img src="images/img/slider3.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Mejores Dispositivos</h5>
               <p>Contamos con los mejores dispositivos del mercado.</p>
@@ -91,7 +91,7 @@
             y de la misma forma en marcas de autopartes.</p>
         </div>
         <div>
-          <img src="img/Imagen1.png">
+          <img src="images/img/Imagen1.png">
         </div>
       </div>
     </section>
@@ -107,7 +107,7 @@
         Desarrollando e implementando nuevos procesos para prestar un servicio sostenible en el mercado</p>
       <div class="d-flex flex-wrap">
         <div class="card">
-          <img src="galeria/auto2.JPG" class="card-img-top" alt="Sincronizacion">
+          <img src="images/galeria/auto2.JPG" class="card-img-top" alt="Sincronizacion">
           <div class="card-body">
             <h5 class="card-title">Sincronizacion</h5>
             <p class="card-text">Un óptimo funcionamiento del motor depende de una buena sincronización,
@@ -117,7 +117,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="galeria/auto4.JPG" class="card-img-top" alt="Servicio Electrico Automotriz">
+          <img src="images/galeria/auto4.JPG" class="card-img-top" alt="Servicio Electrico Automotriz">
           <div class="card-body">
             <h5 class="card-title">Servicio Electrico Automotriz</h5>
             <p class="card-text">Revisión y reparación de sistemas eléctricos automotrices vehículos multimarca.
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="galeria/auto6.JPG" class="card-img-top" alt="Electricidad y Electronica Automotriz">
+          <img src="images/galeria/auto6.JPG" class="card-img-top" alt="Electricidad y Electronica Automotriz">
           <div class="card-body">
             <h5 class="card-title">Elictricidad y Electronica Automotriz</h5>
             <p class="card-text">Servicio y mantenimiento de los sistemas eléctricos y electrónicos de automóviles a
@@ -137,7 +137,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="galeria/auto5.JPG" class="card-img-top" alt="Revisión Tecnomecanica">
+          <img src="images/galeria/auto5.JPG" class="card-img-top" alt="Revisión Tecnomecanica">
           <div class="card-body">
             <h5 class="card-title">Revision Tecnomecanica</h5>
             <p class="card-text">En vorepuestos contamos con equipo de diagnóstico computarizado digital que nos permite
@@ -149,7 +149,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="galeria/Frenos.jpg" class="card-img-top" alt="Frenos">
+          <img src="images/galeria/Frenos.jpg" class="card-img-top" alt="Frenos">
           <div class="card-body">
             <h5 class="card-title">Frenos</h5>
             <p class="card-text">Los frenos son una parte fundamental en la seguridad de su vehículo por tal razón
@@ -161,7 +161,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="galeria/Suspension.png" class="card-img-top" alt="Suspension">
+          <img src="images/galeria/Suspension.png" class="card-img-top" alt="Suspension">
           <div class="card-body">
             <h5 class="card-title">Suspension</h5>
             <p class="card-text">La suspensión es el conjunto de elementos que absorben las anormalidades del terreno y
@@ -182,13 +182,46 @@
       <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-interval="10000">
-            <img src="img/carrusel1.JPG" class="d-block w-100" alt="...">
+            <img src="images/marcas/bg.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-interval="2000">
-            <img src="img/carrusel2.jpg" class="d-block w-100" alt="...">
+            <img src="images/marcas/bg1.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/carrusel3.jpg" class="d-block w-100" alt="...">
+            <img src="images/marcas/bg2.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/marcas/bg3.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/marcas/bg4.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/marcas/bg5.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/marcas/bg6.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/marcas/bg7.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/marcas/bg8.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/marcas/bg9.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/marcas/bg10.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/marcas/bg11.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/marcas/bg12.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/marcas/bg13.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
@@ -220,27 +253,27 @@
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body d-flex align-content-end flex-wrap">
               <figure class="figure">
-                <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
             </div>
@@ -258,51 +291,51 @@
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
             <div class="card-body d-flex align-content-end flex-wrap">
               <figure class="figure">
-                <img src="galeria/prod2.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod2.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod3.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod3.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod4.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod4.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod5.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod5.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod6.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod6.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod7.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod7.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod8.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod8.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod20.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod20.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod21.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod21.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod22.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod22.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod24.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod24.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod25.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod25.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
             </div>
@@ -320,51 +353,51 @@
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
             <div class="card-body d-flex align-content-end flex-wrap">
               <figure class="figure">
-                <img src="galeria/prod10.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod10.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod11.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod11.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod12.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod12.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod13.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod13.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod14.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod14.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod15.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod15.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod16.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod16.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod17.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod17.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod18.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod18.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod19.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod19.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod23.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod23.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="galeria/prod1.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="images/galeria/prod1.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
             </div>
@@ -470,7 +503,7 @@
       </div>
     </div><br>
     <hr style="background: aliceblue;"><br>
-    <h5 style="text-align: center;color: ;">Derechos Reservados © | Vorepuestos </h5>
+    <h5 style="text-align: center;">Derechos Reservados © | Vorepuestos </h5>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
