--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="css/style.css" rel="stylesheet">
   <link href="https://file.myfontastic.com/Hkh9iNwEHRpV9egwVYXrpE/icons.css" rel="stylesheet">
+  
 </head>
 
 <body>
@@ -291,7 +292,8 @@
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
             <div class="card-body d-flex align-content-end flex-wrap">
               <figure class="figure">
-                <img src="images/galeria/prod2.JPG" class="figure-img img-fluid rounded" alt="Bateria Ford">
+                <img src="images/galeria/prod2.JPG" class="figure-img img-fluid rounded" alt="Bateria Ford"
+                  onclick="servicios1()"/>
                 <figcaption class="figure-caption text-right">Bateria Ford.</figcaption>
               </figure>
               <figure class="figure">
@@ -416,34 +418,41 @@
     <!-- ---------------------------------------     We    --------------------------------------- -->
     <!-- ----------------------------------------------------------------------------------------- -->
     <section class="weAre" id="ours">
-      <div class="nosotros">
-        <div class="iframe">
+      <div class="flexbox-container">
+        <div class="google_map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15905.216414732615!2d-74.0540528!3d4.7171444!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2bd2031bcefb37cb!2sV.O.%20Repuestos!5e0!3m2!1sen!2sco!4v1604504820149!5m2!1sen!2sco"
-            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            width="450" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
             tabindex="0"></iframe>
         </div>
-        <h2>nosotros</h2>
-        <p style="color: aliceblue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse minima ratione unde
-          quasi quaerat iste earum
-          ullam quibusdam, voluptas numquam
-          voluptatum adipisci reprehenderit pariatur cum accusantium molestiae nostrum temporibus nobis!</p>
+        <div class="paragraph">
+          <h1 style="text-align: center; margin-top: 20px;">NOSOTROS</h1>
+          <p style="color: aliceblue;">Somos una empresa altamente competitiva tanto en el sector de venta de autopartes
+            eléctricas, cómo en el servicio de mecánica rápida,
+            esto lo lograremos a la vanguardia de la tecnología, desarrollando e implementando nuevos procesos para
+            prestar un servicio sostenible en el mercado
+            Podemos dar completa garantía y confianza a nuestros clientes de las baterías que surtimos para sus
+            vehículos, no son remanufacturadas, ni usadas, baterías totalmente nuevas, con garantía.
+            Mas de 25 años de experiencia con las mismas ofreciendo servicio acá en nuestro taller o a domicilio.
+          </p>
+        </div>
       </div>
+
     </section>
     <section id="info">
-      <h3 id="servicios" style="font-size: 2.5em">NUESTROS EQUIPO</h3>
+      <h1 style="color: #202020;">NUESTRO EQUIPO</h1>
       <div class="contenedor">
         <div class="info-vo">
-          <img src="images/img/ual.png"></br>
-          <h4>Gerente general</h4>
+          <img src="images/img/foto.jpg"></br></br>
+          <h2 style="color: #202020;">Gerente general</h2>
         </div>
         <div class="info-vo">
-          <img src="images/img/ual.png"/></br>
-          <h4>Asesor</h4>
+          <img src="images/img/foto1.jpg" /></br></br>
+          <h2 style="color: #202020;">Asesor</h2>
         </div>
         <div class="info-vo">
-          <img src="images/img/ual.png"/></br>
-          <h4>Contadora</h4>
+          <img src="images/img/foto3.jpg" /></br></br>
+          <h2 style="color: #202020;">Contadora</h2>
         </div>
       </div>
     </section>
@@ -462,17 +471,18 @@
 
             <div class="col">
               <i class="icono icon-envelope"></i>
-              <p>maicolriola@hotmail.es</p>
+              <p><a href="mailto:rochipili@outlook.es" style="color: aliceblue;">rochipili@outlook.es</p></a>
             </div>
 
             <div class="col">
               <i class="icono icon-phone"></i>
-              <p>(+57) 3165352911 <br> (+57) 3016058485</p>
+              <p><a href="tel:310-791-2748" style="color: aliceblue;">(+57) 310 791-2748 </a></p>
             </div>
 
             <div class="col">
               <i class="icono icon-direction"></i>
-              <p>cll2 #93d- 30</p>
+              <p><a href=" https://goo.gl/maps/Xzh5YmVQky9Tz3Rs7" style="color: aliceblue;">Cra 46 # 130 - 56
+                  Bogotá</p></a>
             </div>
 
             <div class="redes-s">
@@ -495,19 +505,21 @@
           </form>
     </section>
   </main>
+  <!-- ----------------------------------------------------------------------------------------- -->
+  <!-- ---------------------------------------  Footer  --------------------------------------- -->
+  <!-- ----------------------------------------------------------------------------------------- -->
   <footer>
     <div class="contenedor1">
       <div class="column--informacion">
-        <h2>Mas informacion</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, corrupti. Dignissimos, aperiam. Eveniet
-          assumenda est officiis eius provident rerum dignissimos quas quibusdam temporibus in aliquid distinctio,
-          expedita minus? Tempore, similique.. </p>
+        <h2>¿Por qué elegirnos?</h2>
+        <p>Una de las ventajas de comprar con nosotros es la amplia gama de productos.
+          Aquí se encuentran disponibles piezas de coche para cada marca y tipo de automóvil. </p>
       </div>
       <div class="column--redes">
         <h2>Redes Sociales</h2>
         <div class="row">
           <img src="https://image.flaticon.com/icons/svg/145/145802.svg">
-          <a href="">Siguenos en Facebook</a>
+          <a href="https://www.facebook.com/VORepuestos1-103385541458976">Siguenos en Facebook</a>
 
         </div>
         <div class="row">
@@ -521,26 +533,27 @@
         </div>
       </div>
       <div class="column--contactos">
-        <h2>Informacion de Contacto</h2>
+        <h2>Información de Contacto</h2>
         <div class="row2">
           <img src="https://www.flaticon.es/svg/static/icons/svg/2991/2991231.svg" alt="">
-          <p>Bogota DC</p>
+          <p><a href=" https://goo.gl/maps/Xzh5YmVQky9Tz3Rs7" style="color: aliceblue;">Cra 46 # 130 - 56
+              Bogotá</p></a>
         </div>
         <div class="row2">
           <img src="https://www.flaticon.es/svg/static/icons/svg/855/855502.svg" alt="">
-          <p>maicolriola@hotmail.es</p>
+          <p><a href="mailto:rochipili@outlook.es" style="color: aliceblue;">rochipili@outlook.es</p></a>
         </div>
         <div class="row2">
           <img src="https://www.flaticon.es/svg/static/icons/svg/644/644458.svg" alt="">
-          <p>3165352911</p>
+          <p><a href="tel:310-791-2748" style="color: aliceblue;">(+57) 310 791-2748 </a></p>
         </div>
-
       </div>
     </div><br>
     <hr style="background: aliceblue;"><br>
-    <h5 style="text-align: center;">Derechos Reservados © | Vorepuestos </h5>
+    <h5 style="text-align: center;">Derechos Reservados © | V.O Repuestos </h5>
   </footer>
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <script src="js/sweetAlert.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -550,9 +563,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
-
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  
 
 </body>
 
