--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- ----------------------------------------------------------------------------------------- -->
     <section class="services" id="services">
       <h2>Servicios</h2>
-      <p>Ofrecer soluciones eficientes,<br>
+      <p class="solutions">Ofrecer soluciones eficientes,
         confiables y duraderas tanto en todo lo relacionado con el mantenimiento y reparación de vehículos,<br>
         cómo en la venta de autopartes eléctricas. <br>
         Desarrollando e implementando nuevos procesos para prestar un servicio sostenible en el mercado</p>
@@ -182,10 +182,10 @@
     <section class="marksCarrusel">
       <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-interval="10000">
+          <div class="carousel-item active">
             <img src="images/marcas/bg.png" class="d-block w-100" alt="Chevrolet">
           </div>
-          <div class="carousel-item" data-interval="2000">
+          <div class="carousel-item">
             <img src="images/marcas/bg1.png" class="d-block w-100" alt="Fiat">
           </div>
           <div class="carousel-item">
@@ -422,11 +422,11 @@
         <div class="google_map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15905.216414732615!2d-74.0540528!3d4.7171444!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2bd2031bcefb37cb!2sV.O.%20Repuestos!5e0!3m2!1sen!2sco!4v1604504820149!5m2!1sen!2sco"
-            width="450" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+             frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
             tabindex="0"></iframe>
         </div>
         <div class="paragraph">
-          <h1 style="text-align: center; margin-top: 20px;">NOSOTROS</h1>
+          <h2 style="text-align: center; margin-top: 20px;">NOSOTROS</h2>
           <p style="color: aliceblue;">Somos una empresa altamente competitiva tanto en el sector de venta de autopartes
             eléctricas, cómo en el servicio de mecánica rápida,
             esto lo lograremos a la vanguardia de la tecnología, desarrollando e implementando nuevos procesos para
@@ -440,19 +440,19 @@
 
     </section>
     <section id="info">
-      <h1 style="color: #202020;">NUESTRO EQUIPO</h1>
+      <h2 style="color: #202020;">NUESTRO EQUIPO</h2>
       <div class="contenedor">
         <div class="info-vo">
           <img src="images/img/foto.jpg"></br></br>
-          <h2 style="color: #202020;">Gerente general</h2>
+          <h3 style="color: #202020;">Gerente general</h3>
         </div>
         <div class="info-vo">
           <img src="images/img/foto1.jpg" /></br></br>
-          <h2 style="color: #202020;">Asesor</h2>
+          <h3 style="color: #202020;">Asesor</h3>
         </div>
         <div class="info-vo">
           <img src="images/img/foto3.jpg" /></br></br>
-          <h2 style="color: #202020;">Contadora</h2>
+          <h3 style="color: #202020;">Contadora</h3>
         </div>
       </div>
     </section>
@@ -463,7 +463,7 @@
     <section class="contenedor__all" id="contact">
       <div class="contenedor">
 
-        <h1>Formulario Contactenos</h1>
+        <h2>Formulario Contactenos</h2>
 
         <div class="contenido">
 
